# Hokm

./: CMakeLists.txt  Card.qml  Crown.qml  README.md  ScoreDisplay.qml  main.cpp  main.qml  qml.qrc
models/: UiBridge.cpp  UiBridge.h  game.cpp  game.h  player.cpp  player.h  scoregridclass.cpp  scoregridclass.h
